# ai-research

./: .gitignore
book-editor/: book-editor.ipynb
mcp-test/: .gitignore  README.md  pyproject.toml  script.py
painter/: .gitignore  README.md  paint.py  pyproject.toml
render-image/: build.cmd  main.c
ticket-reader/: .gitignore  README.md  make_data.py  make_ocr_data.py  ocr.py  pyproject.toml  read_ticket.py  rectify.py  synth.py  train_corners.py  train_ocr.py
