[project]
name = "mcp-test"
version = "0.1.0"
description = "A demonstration of using a local LLM with Ollama to query a SQLite database via function calling."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "ollama>=0.5.1",
    "rich>=14.0.0",
]

[project.scripts]
start = "script:main"

[tool.uv]
dev-dependencies = []
